--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "https://johnnyJCB.github.io",
+  "homepage": "https://johnnyJCB.github.io/Portfolio-template/",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
